internal/fixtures/architecture/negative/template-expression/packages/ui/src/credential.ts
export const unsafe = `outer ${`inner ${authRef}`}`;
